--- a/db/room/build.gradle
+++ b/db/room/build.gradle
@@ -4,9 +4,13 @@ plugins {
 }
 
 dependencies {
+    def room_version = "2.4.2"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
     implementation project(path: ':db:note')
     implementation project(path: ':db:project')
     implementation project(path: ':db:score')
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.room:room-ktx:1.7.0'
 }
