--- a/settings.gradle
+++ b/settings.gradle
@@ -18,7 +18,7 @@ include ':repository:note:impl'
 include ':repository:note:api'
 include ':repository:project:impl'
 include ':repository:project:api'
-include ':db:core'
+include ':db:room'
 include ':db:note'
 include ':db:project'
 include ':db:score'
