--- a/repository/note/impl/build.gradle
+++ b/repository/note/impl/build.gradle
@@ -1,6 +1,10 @@
 plugins {
     id 'com.android.library'
-    id 'org.jetbrains.kotlin.android'
+    id 'kotlin-android'
+}
+
+android {
+    compileSdk 32
 }
 
 dependencies {
