--- a/di/build.gradle
+++ b/di/build.gradle
@@ -12,8 +12,8 @@ dependencies {
     implementation 'com.google.dagger:dagger:2.41'
     kapt 'com.google.dagger:dagger-compiler:2.41'
 
-    // TODO Вынести в общий каталог версий
-    def room_version = "2.4.2"
-    implementation "androidx.room:room-runtime:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
+
+    def fragment_version = "1.5.0"
+    // Kotlin
+    implementation "androidx.fragment:fragment-ktx:$fragment_version"
 }
