--- a/build.gradle
+++ b/build.gradle
@@ -4,14 +4,15 @@ buildscript {
     ext.kotlin_version = '1.5.30'
 
     dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath libs.kotlin.dsl
     }
 }
 
 plugins {
-    id 'com.android.application' version '7.1.2' apply false
-    id 'com.android.library' version '7.1.2' apply false
-    id "org.jetbrains.kotlin.kapt" version "1.5.30" apply false
+    alias libs.plugins.android.application apply false
+    alias libs.plugins.android.library apply false
+    alias libs.plugins.kotlin.android apply false
+    alias libs.plugins.kotlin.kapt apply false
 }
 
 task clean(type: Delete) {
