--- a/db/build.gradle
+++ b/db/build.gradle
@@ -1,7 +1,7 @@
 plugins {
-    id 'com.android.library'
-    id 'kotlin-android'
-    id 'kotlin-kapt'
+    alias libs.plugins.android.library
+    alias libs.plugins.kotlin.android
+    alias libs.plugins.kotlin.kapt
 }
 
 android {
@@ -9,11 +9,9 @@ android {
 }
 
 dependencies {
-    implementation 'com.google.dagger:dagger:2.41'
-    kapt 'com.google.dagger:dagger-compiler:2.41'
+    implementation libs.dagger
+    kapt libs.dagger.compiler
 
-    // TODO Вынести в общий каталог версий
-    def room_version = "2.4.2"
-    implementation "androidx.room:room-runtime:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
+    implementation libs.bundles.room
+    kapt libs.room.compiler
 }
