--- a/di/build.gradle
+++ b/di/build.gradle
@@ -1,7 +1,7 @@
 plugins {
-    id 'com.android.library'
-    id 'kotlin-android'
-    id 'kotlin-kapt'
+    alias libs.plugins.android.library
+    alias libs.plugins.kotlin.android
+    alias libs.plugins.kotlin.kapt
 }
 
 android {
@@ -9,11 +9,8 @@ android {
 }
 
 dependencies {
-    implementation 'com.google.dagger:dagger:2.41'
-    kapt 'com.google.dagger:dagger-compiler:2.41'
+    implementation libs.dagger
+    kapt libs.dagger.compiler
 
-
-    def fragment_version = "1.5.0"
-    // Kotlin
-    implementation "androidx.fragment:fragment-ktx:$fragment_version"
+    implementation libs.fragment
 }
