--- a/repository/note/api/build.gradle
+++ b/repository/note/api/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-    id 'com.android.library'
-    id 'kotlin-android'
+    alias libs.plugins.android.library
+    alias libs.plugins.kotlin.android
 }
 
 android {
@@ -9,6 +9,4 @@ android {
 
 dependencies {
     api project(path: ':repository:project:api')
-
-    implementation 'androidx.core:core-ktx:1.7.0'
 }
