--- a/screen/main/build.gradle
+++ b/screen/main/build.gradle
@@ -1,7 +1,7 @@
 plugins {
-    id 'com.android.library'
-    id 'kotlin-android'
-    id 'kotlin-kapt'
+    alias libs.plugins.android.library
+    alias libs.plugins.kotlin.android
+    alias libs.plugins.kotlin.kapt
 }
 
 android {
@@ -9,16 +9,16 @@ android {
 }
 
 dependencies {
-    def room_version = "2.4.2"
-    implementation "androidx.room:room-runtime:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
     implementation project(path: ':db')
     implementation project(path: ':di')
 
-    implementation 'com.google.dagger:dagger:2.41'
-    kapt 'com.google.dagger:dagger-compiler:2.41'
+    implementation libs.bundles.room
+    kapt libs.room.compiler
 
-    implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation libs.dagger
+    kapt libs.dagger.compiler
+
+    implementation libs.appCompat
+    implementation libs.material
+    implementation libs.constraintLayout
 }
