--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,6 +6,7 @@ dagger = "2.41"
 material = "1.4.0"
 appCompat = "1.3.0"
 constraintLayout = "2.0.4"
+compose = "1.1.1"
 
 [libraries]
 room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
@@ -19,9 +20,15 @@ fragment = { module = "androidx.fragment:fragment-ktx", version = "1.5.0" }
 material = { module = "com.google.android.material:material", version.ref = "material" }
 appCompat = { module = "androidx.appcompat:appcompat", version.ref = "appCompat" }
 constraintLayout = { module = "androidx.constraintlayout:constraintlayout", version.ref = "constraintLayout" }
+compose-ui = { module = "androidx.compose.ui:ui", version.ref = "compose" }
+compose-uiTooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose" }
+compose-foundation = { module = "androidx.compose.foundation:foundation", version.ref = "compose" }
+compose-material = { module = "androidx.compose.material:material", version.ref = "compose" }
+activity-compose = { module = "androidx.activity:activity-compose", version = "1.4.0" }
 
 [bundles]
 room = ["room-ktx", "room-paging", "room-runtime"]
+compose = ["compose-ui", "compose-uiTooling", "compose-foundation", "compose-material"]
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "gradlePlugin" }
