--- a/screen/project/src/main/AndroidManifest.xml
+++ b/screen/project/src/main/AndroidManifest.xml
@@ -5,6 +5,12 @@
     <application>
         <activity
             android:name=".ProjectActivity"
-            android:exported="false"/>
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 </manifest>
